...
"Scaffolding rental" = "Scaffolding rental";
"Scaffolding system rental" = "Scaffolding system rental";
"Crane service" = "Crane service";
"Mobile crane with operator" = "Mobile crane with operator";
"Invoices" = "Invoices";
"Estimates" = "Estimates";
"Clients" = "Clients";
"Items" = "Items";
"Reports" = "Reports";
"Settings" = "Settings";
"Language" = "Language";
"App Language" = "App Language";
"Theme" = "Theme";
...
